Fixed frontpage horizontal scroll issue

--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -1,29 +1,10 @@
-
-
-.card1 {
-    grid-area: card1;
-}
-
-.card2 {
-    grid-area: card2;
-}
-
-.card3 {
-    grid-area: card3;
-}
-.hl {
-    display: inline-block;
-    width: 100%;
-    margin-bottom: 5px;
-}
-
 .container {
-    min-height: 200%;
+    height: 200%;
     display: grid;
     grid-template: 
     ". pageName ." 1fr
     ". gallery ." 9fr
-    "secondPage secondPage secondPage" 10fr /auto 50vw auto;
+    "secondPage secondPage secondPage" 10fr /auto minmax(50%, auto) auto;
     column-gap: 3vw;
     row-gap: 3vh;
 
@@ -46,12 +27,15 @@
         grid-template: 
         "title title title"
         "card1 card2 card3";
+
         .title {
             grid-area: title;
         }
+
         [class*="card"] {
             align-self: start;
-          }
+        }
+
         .card1 {
             grid-area: card1;
         }
