--- a/src/app/pages/services/service-subpage/service-subpage.component.scss
+++ b/src/app/pages/services/service-subpage/service-subpage.component.scss
@@ -27,5 +27,6 @@
         width: 100%;
         max-width: 800px;
         grid-area: image1;
+        justify-self: center;
     }
 }
